UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/DSAT_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>DSAT Configuration</label>
    <pluralLabel>DSAT Configurations</pluralLabel>
</CustomObject>