UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/fields/ApiKey_Header__c.field-meta.xml
<CustomField>
    <fullName>ApiKey_Header__c</fullName>
    <label>ApiKey Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>