UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/fields/Bearer__c.field-meta.xml
<CustomField>
    <fullName>Bearer__c</fullName>
    <label>Bearer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>