UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/fields/Bearer_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Bearer_Expiry__c</fullName>
    <label>Bearer Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>