UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/fields/ContentType_Header__c.field-meta.xml
<CustomField>
    <fullName>ContentType_Header__c</fullName>
    <label>ContentType Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>