UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production</label>
    <type>Checkbox</type>
</CustomField>