UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_Configuration__mdt/fields/SandBox__c.field-meta.xml
<CustomField>
    <fullName>SandBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SandBox</label>
    <type>Checkbox</type>
</CustomField>